# keychat_rust_ffi_plugin

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ffigen.yaml  pubspec.yaml  readme-2.md
.github/workflows/: ci.yaml
android/: aarch64-config.gradle  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/.github/workflows/: test_example_plugin_build.yml
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/hello_rust_ffi_plugin_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc
ios/: hello_rust_ffi_plugin.podspec  keychat_rust_ffi_plugin.podspec
lib/: api_cashu.dart  api_cashu_v1.dart  api_cashu_v2.dart  api_mls.dart  api_nostr.dart  api_signal.dart  api_signal_v1.dart  frb_generated.dart  frb_generated.io.dart  hello_rust_ffi_plugin_bindings_generated.dart  index.dart  lib.dart
lib/api_cashu/: check.dart  types.dart  types.freezed.dart
lib/api_cashu_v1/: types.dart
lib/api_cashu_v2/: types.dart
lib/api_mls/: types.dart  user.dart
lib/api_signal/: types.dart
linux/: CMakeLists.txt
macos/: keychat_rust_ffi_plugin.podspec
macos/Classes/: keychat_rust_ffi_plugin.c
rust/: Cargo.toml
rust-test/: Cargo.toml
rust-test/src/: ecash.rs  ecash_new.rs  mls.rs  mls_new.rs  mls_new2.rs  signal.rs  signal_v1.rs
rust-test/tests/: nostr_test.rs  test.rs
rust/src/: api_cashu.check.rs  api_cashu.rs  api_cashu.types.rs  api_cashu_new.rs  api_cashu_new.types.rs  api_cashu_v1.rs  api_cashu_v1.types.rs  api_cashu_v2.rs  api_cashu_v2.types.rs  api_mls.rs  api_mls.types.rs  api_mls.user.rs  api_mls_new.rs  api_mls_new2.rs  api_nostr.rs  api_signal.rs  api_signal.types.rs  api_signal_v1.rs  api_v2.rs  gen.rs  lib.rs
rust/tests/: v2_migration_test.rs
src/: CMakeLists.txt  hello_rust_ffi_plugin.c  keychat_rust_ffi_plugin.c
windows/: CMakeLists.txt
