[workspace]
resolver = "2"
members = ["rust", "rust-test"]

[profile.release]
debug = false
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
rpath = true

[profile.dev]
debug = 2

[patch.crates-io]
keccak = { git = "https://github.com/RustCrypto/sponges.git", tag = "keccak-v0.2.0-rc.2" }
