[package]
name = "keychat_rust_ffi_plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.73"
flutter_rust_bridge = "=2.1.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = {version = "1.28.1", features = ["sync", "rt-multi-thread"]}

signal-store = {git = "https://github.com/keychat-io/signal-storage.git", rev = "72271d2"}
cashu-wallet = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "240807"}
cashu-wallet-sqlite = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "240807"}
# cashu-wallet = {path = "../../cashu-wallet-rs/cashu-wallet"}
# cashu-wallet-sqlite = {path = "../../cashu-wallet-rs/store-sqlite"}
#
# aes = "0.7"
# block-modes = "0.8"
# base64 = "0.21"
bip39 = {version = "2.0", features = ["rand"]}
bitcoin = "0.30"
ed25519-dalek = {version = "2.1.1", features = ["digest"]}
nostr = {version = "0.33", default-features = false, features = ["std", "nip04", "nip06", "nip44", "nip59"] }
